VS 2017 / win10 sdk 10.0.17763

--- a/package.json
+++ b/package.json
@@ -1,10 +1,6 @@
 {
-  "author": {
-    "name": "Avaer Kazmer <a@modules.io>"
-  },
-  "bugs": {
-    "url": "https://github.com/modulesio/node-pty-win/issues"
-  },
+  "author": { "name": "Avaer Kazmer <a@modules.io>" },
+  "bugs": { "url": "https://github.com/modulesio/node-pty-win/issues" },
   "dependencies": {
     "nan": "^2.6.2"
   },
